Edited wiki page through web user interface.
git-svn-id: https://openmalaria.googlecode.com/svn@1021 aa1ca794-fd11-11dd-ac65-f74f249cfaac

--- a/wiki/Binaries.wiki
+++ b/wiki/Binaries.wiki
@@ -4,7 +4,7 @@ Precompiled Binaries for windows, macosx and linux.
 
 It's now possible to download Precompiled Binaries from the openmalaria repository.
 
-Start by making a folder wherever you want to use OpenMalaria. Then, you need to download one of the archives here: [http://openmalaria.googlecode.com/svn/download/r784]
+Start by making a folder wherever you want to use OpenMalaria. Then, you need to download one of the archives here: [http://openmalaria.googlecode.com/svn/download]
  * win32.zip
  * macosx.tar.bz2
  * linux32.tar.bz2
