--- a/wiki/XmlScenario.wiki
+++ b/wiki/XmlScenario.wiki
@@ -88,8 +88,8 @@ This element controls which survey measures are [OutputFiles#measures output]. (
 || 25 || nIPTDoses  ||  number of IPT Doses ||
 || 26 || annAvgK   || Annual Average Kappa. Calculated once a year as sum of human infectiousness divided by initial EIR summed over a year. Single value, not per age-group. ||
 || 27 || nNMFever  ||  Number of episodes (non-malaria fever) ||
-|| 30 || innoculationsPerAgeGroup || The total number of innoculations per age group, summed over the reporting period. ||
-|| 28 || innoculationsPerDayOfYear  ||  Innoculations per human (all ages) per day of year, over the last year. ||
+|| 30 || innoculationsPerAgeGroup || The total number of inoculations per age group, summed over the reporting period. ||
+|| 28 || innoculationsPerDayOfYear  ||  Inoculations per human (all ages) per day of year, over the last year. ||
 || 29 || kappaPerDayOfYear  ||  Kappa (human infectiousness) weighted by availability per day-of-year for the last year. ||
 
 Vector model parameters. All are point-time outputs, not averages. The Nv0, Nv, Ov and Sv outputs are per-species; the EIR outputs are single values.
