--- a/wiki/XmlScenario.wiki
+++ b/wiki/XmlScenario.wiki
@@ -195,9 +195,9 @@ The `parameters` element describes a list of parameters which are fitted. Usuall
 
 A list of which parameters may be specified can be found here: [http://code.google.com/p/openmalaria/source/browse/trunk/include/inputData.h inputData.h] (the numbers, rather than names, are used to specify each parameter in scenario files).
 
-This element also contains some attributes (here for historical reasons (TODO: are these only historical reasons?):
+This element also contains some attributes (placed _here_ for historical reasons):
 
  *  `interval` — number of days in a time-step
  *  `iseed` — number to seed random-number-generator with
- *  `delta` — unused
- *  `latentp` — number of timesteps by which blood-stage infection is delayed in descriptive infection model (TODO: should apply to other models)
+ *  `delta` — unused and removed in schema version 19
+ *  `latentp` — number of timesteps by which blood-stage infection is delayed from biting
