--- a/wiki/ModelTransmission.wiki
+++ b/wiki/ModelTransmission.wiki
@@ -22,4 +22,6 @@ The Entomological Infection Rate can be calculated in three modes: `equilibriumM
 
 == Vector transmission ==
 
-Simulations that include non-periodic changes in the vectorial capacity use a seasonally forced version of the model for vector dynamics of Chitnis et al (2008)Journal of Biological Dynamics Vol. 2, No. 3, July 2008, 259–285.
+Simulations that include non-periodic changes in the vectorial capacity use a seasonally forced version of the model for vector dynamics of [http://www.informaworld.com/smpp/content~content=a795158564&db=all Chitnis et al (2008)Journal of Biological Dynamics Vol. 2, No. 3, July 2008, 259–285].
+
+XML parameters for vector transmission are described [XmlEntoVector here].
