--- a/wiki/ModelWithinHost.wiki
+++ b/wiki/ModelWithinHost.wiki
@@ -9,9 +9,9 @@ This category covers the following models:
  * Liver/pre-patent stage: the start of the infection is simply delayed (see `latentp`).
  * Blood stage (merozoite) models: these are what we usually mean by "infection" models: 
 Currently implemented models are:
- #: Maire et al (ref) (`DescriptiveInfection` class) 
- #  `EmpiricalInfection` 
- #: [http://www.ncbi.nlm.nih.gov/pubmed/11315171 Molineaux et al (2001)] (implemented in the   `MolineauxInfection` class).  This is mass action model of Plasmodium falciparum asexual parasite densities fitted to malariatherapy data.  In incorporates (i) intra-clonal antigenic variation, (ii) large variations of the variants' baseline growth rate, depending on both variant and case, (iii) innate autoregulation of the asexual parasite density, variable among cases, (iv) acquired variant-specific immunity and (v) acquired variant-transcending immunity, variable among cases.  The published model uses a discrete time-step of 2 days.  The openMalaria implementation adapts this to a 1-day time-step by interpolating the parasite multiplication rate, and includes immune effects of previous exposure by further modifying the multiplication rates. 
+ #: [http://www.ncbi.nlm.nih.gov/pubmed/16931812 Maire et al (2006)] (implemented in the `DescriptiveInfection` class).  This model takes, as a representation of a malaria infection in a naive human, a statistical description of the parasite densities over time during a malariatherapy infection, with stochastic noise added independently at each time point.  Acquired immunity, due to previous exposure, is assumed to reduce these parasite densities.  This model uses discrete 5-day time-steps.
+ #  `EmpiricalInfection` This is a model of _Plasmodium falciparum_ asexual parasite densities based on an autoregressive time-series model to fitted to malariatherapy data using a Bayesian simulation-based algorithm. The fitting algorithm immediately suggests a corresponding prediction method that provides stochastic predictions of parasite density profiles, and a natural approach for incorporating effects on parasite multiplication of blood stage vaccines and of sub-therapeutic drug concentrations.  
+ #: [http://www.ncbi.nlm.nih.gov/pubmed/11315171 Molineaux et al (2001)] (implemented in the   `MolineauxInfection` class).  This is a mass action model of _Plasmodium falciparum_ asexual parasite densities fitted to malariatherapy data.  In incorporates (i) intra-clonal antigenic variation, (ii) large variations of the variants' baseline growth rate, depending on both variant and case, (iii) innate autoregulation of the asexual parasite density, variable among cases, (iv) acquired variant-specific immunity and (v) acquired variant-transcending immunity, variable among cases.  The published model uses a discrete time-step of 2 days.  The `openMalaria` implementation adapts this to a 1-day time-step by interpolating the parasite multiplication rate, and includes drug-, vaccine-, and natural immune effects of previous exposure, by further modifying the multiplication rates. 
 
  * Sexual stage (gametocyte) model: this is based on the merozoite density between 10 and 20 days earlier.
  * Acquired immunity: reduces the merozoite survival factor based on history of previous infections. Most code is in the `Infection` and `WithinHostModel` base classes.
