--- a/wiki/ModelWithinHost.wiki
+++ b/wiki/ModelWithinHost.wiki
@@ -10,10 +10,11 @@ This category covers the following models:
  * Blood stage (merozoite) models: these are what we usually mean by "infection" models: 
 Currently implemented models are:
  #: [http://www.ncbi.nlm.nih.gov/pubmed/16931812 Maire et al (2006)] (implemented in the `DescriptiveInfection` class).  This model takes, as a representation of a malaria infection in a naive human, a statistical description of the parasite densities over time during a malariatherapy infection, with stochastic noise added independently at each time point.  Acquired immunity, due to previous exposure, is assumed to reduce these parasite densities.  This model uses discrete 5-day time-steps.
- #  `EmpiricalInfection` This is a model of _Plasmodium falciparum_ asexual parasite densities based on an autoregressive time-series model to fitted to malariatherapy data using a Bayesian simulation-based algorithm. The fitting algorithm immediately suggests a corresponding prediction method that provides stochastic predictions of parasite density profiles, and a natural approach for incorporating effects on parasite multiplication of blood stage vaccines and of sub-therapeutic drug concentrations.  
+ #  `EmpiricalInfection` This is a model of _Plasmodium falciparum_ asexual parasite densities based on an autoregressive time-series model to fitted to malariatherapy data using a Bayesian simulation-based algorithm. The fitting algorithm immediately suggests a corresponding prediction method that provides stochastic predictions of parasite density profiles, and a natural approach for incorporating effects on parasite multiplication of blood stage vaccines and of sub-therapeutic drug concentrations. This model uses discrete 1-day time-steps.  
  #: [http://www.ncbi.nlm.nih.gov/pubmed/11315171 Molineaux et al (2001)] (implemented in the   `MolineauxInfection` class).  This is a mass action model of _Plasmodium falciparum_ asexual parasite densities fitted to malariatherapy data.  In incorporates (i) intra-clonal antigenic variation, (ii) large variations of the variants' baseline growth rate, depending on both variant and case, (iii) innate autoregulation of the asexual parasite density, variable among cases, (iv) acquired variant-specific immunity and (v) acquired variant-transcending immunity, variable among cases.  The published model uses a discrete time-step of 2 days.  The `openMalaria` implementation adapts this to a 1-day time-step by interpolating the parasite multiplication rate, and includes drug-, vaccine-, and natural immune effects of previous exposure, by further modifying the multiplication rates. 
 
- * Sexual stage (gametocyte) model: this is based on the merozoite density between 10 and 20 days earlier.
+ * Sexual stage (gametocyte) model: [http://www.ncbi.nlm.nih.gov/pubmed/16931813 Ross et al, 2006] This uses the results of a statistical model for the relationship between asexual parasite densities of _Plasmodium falciparum_ and the infectivity of the host to mosquitoes, fitted to malariatherapy data. The model takes into account the delay between asexual parasitemia and infectivity resulting from the time course of gametocytemia, by making transmission depend on the asexual parasite density between 10 and 20 days earlier. It also allows for the need for the blood meal to contain gametocytes of both sexes if infection is to take place. 
+
  * Acquired immunity: reduces the merozoite survival factor based on history of previous infections. Most code is in the `Infection` and `WithinHostModel` base classes.
 
 In some way the [ModelDrug drug models] could also be considered within-host models, though in the code they come under the "PkPd" directory and namespace.
