--- a/wiki/ModelWithinHost.wiki
+++ b/wiki/ModelWithinHost.wiki
@@ -1,20 +1,21 @@
 #summary Within-host models
 
-= Introduction =
+= Within-host infection models =
 
-The models that calculate parasite densities within humans in openMalaria referred to as the within-host models. Within the openmalaria code, these reside within the `WithinHost` namespace and classes (excepting the gametocyte model).
+The models associated with the calculation of parasite densities within human hosts are, in OpenMalaria, referred to as the within-host models. Within the openmalaria code, these reside within the `WithinHost` namespace and classes (excepting the gametocyte model).
 
 This category covers the following models:
 
  * Liver/pre-patent stage: the start of the infection is simply delayed (see `latentp`).
- * Blood stage (merozoite) models: these are what we usually mean by "infection" models: 
-Currently implemented models are:
- #: [http://www.ncbi.nlm.nih.gov/pubmed/16931812 Maire et al (2006)] (implemented in the `DescriptiveInfection` class).  This model takes, as a representation of a malaria infection in a naive human, a statistical description of the parasite densities over time during a malariatherapy infection, with stochastic noise added independently at each time point.  Acquired immunity, due to previous exposure, is assumed to reduce these parasite densities.  This model uses discrete 5-day time-steps.
- #  `EmpiricalInfection` This is a model of _Plasmodium falciparum_ asexual parasite densities based on an autoregressive time-series model to fitted to malariatherapy data using a Bayesian simulation-based algorithm. The fitting algorithm immediately suggests a corresponding prediction method that provides stochastic predictions of parasite density profiles, and a natural approach for incorporating effects on parasite multiplication of blood stage vaccines and of sub-therapeutic drug concentrations. This model uses discrete 1-day time-steps.  
- #: [http://www.ncbi.nlm.nih.gov/pubmed/11315171 Molineaux et al (2001)] (implemented in the   `MolineauxInfection` class).  This is a mass action model of _Plasmodium falciparum_ asexual parasite densities fitted to malariatherapy data.  In incorporates (i) intra-clonal antigenic variation, (ii) large variations of the variants' baseline growth rate, depending on both variant and case, (iii) innate autoregulation of the asexual parasite density, variable among cases, (iv) acquired variant-specific immunity and (v) acquired variant-transcending immunity, variable among cases.  The published model uses a discrete time-step of 2 days.  The `openMalaria` implementation adapts this to a 1-day time-step by interpolating the parasite multiplication rate. Drug-, vaccine-, and natural immune effects of previous exposure are represented by further modifying the parasite multiplication rates. 
-
- * Acquired immunity: in the [http://www.ncbi.nlm.nih.gov/pubmed/16931812 Maire et al (2006)] within-host models the effect of acquired immunity is to directly reduce the parasite density.  Within the other within-host models, acquired immunity reduces the merozoite survival factor.  In either case the effect depends on the history of previous infections. Most code is in the `Infection` and `WithinHostModel` base classes.
-
+ * Asexual blood stage (merozoite) models: these are what we usually mean by "infection" models (see below).
+ * Acquired natural immunity: in the [http://www.ncbi.nlm.nih.gov/pubmed/16931812 Maire et al (2006)] within-host models the effect of acquired immunity is to directly reduce the parasite density.  Within the other within-host models, acquired immunity reduces the merozoite survival factor.  In either case the effect depends on the history of previous infections. Most code is in the `Infection` and `WithinHostModel` base classes.
  * Sexual stage (gametocyte) model: [http://www.ncbi.nlm.nih.gov/pubmed/16931813 Ross et al, 2006] This uses the results of a statistical model for the relationship between asexual parasite densities of _Plasmodium falciparum_ and the infectivity of the host to mosquitoes, fitted to malariatherapy data. The model takes into account the delay between asexual parasitemia and infectivity resulting from the time course of gametocytemia, by making transmission depend on the asexual parasite density between 10 and 20 days earlier. It also allows for the need for the blood meal to contain gametocytes of both sexes if infection is to take place. 
 
 In some way the [ModelDrug drug models] could also be considered within-host models, though in the code they come under the "PkPd" directory and namespace.
+
+== Asexual infection models ==
+
+Currently implemented models are:
+ # [http://www.ncbi.nlm.nih.gov/pubmed/16931812 Maire et al (2006)] (implemented in the `DescriptiveInfection` class).  This model takes, as a representation of a malaria infection in a naive human, a statistical description of the parasite densities over time during a malariatherapy infection, with stochastic noise added independently at each time point.  Acquired immunity, due to previous exposure, is assumed to reduce these parasite densities.  This model uses discrete 5-day time-steps.
+ # (As-yet no publication; implemented in the `EmpiricalInfection` class). This is a model of _Plasmodium falciparum_ asexual parasite densities based on an autoregressive time-series model to fitted to malariatherapy data using a Bayesian simulation-based algorithm. The fitting algorithm immediately suggests a corresponding prediction method that provides stochastic predictions of parasite density profiles, and a natural approach for incorporating effects on parasite multiplication of blood stage vaccines and of sub-therapeutic drug concentrations. This model uses discrete 1-day time-steps.  
+ # [http://www.ncbi.nlm.nih.gov/pubmed/11315171 Molineaux et al (2001)] (implemented in the   `MolineauxInfection` class).  This is a mass action model of _Plasmodium falciparum_ asexual parasite densities fitted to malariatherapy data.  In incorporates (i) intra-clonal antigenic variation, (ii) large variations of the variants' baseline growth rate, depending on both variant and case, (iii) innate autoregulation of the asexual parasite density, variable among cases, (iv) acquired variant-specific immunity and (v) acquired variant-transcending immunity, variable among cases.  The published model uses a discrete time-step of 2 days.  The `openMalaria` implementation adapts this to a 1-day time-step by interpolating the parasite multiplication rate. Drug-, vaccine-, and natural immune effects of previous exposure are represented by further modifying the parasite multiplication rates. 
