--- a/wiki/TableOfContents.wiki
+++ b/wiki/TableOfContents.wiki
@@ -3,8 +3,8 @@
 ===OpenMalaria===
   * [Start Introduction]
   * [SetupOverview Getting started (local simulations)]
-  * [XmlScenario Inputs: creating a scenario]
-  * [OutputFiles Outputs: interpreting results]
+  * *[XmlScenario Inputs: creating a scenario]*
+  * *[OutputFiles Outputs: interpreting results]*
 
 ===Code===
   * [Code#Source_code Source]
@@ -19,4 +19,4 @@
   * [ModelClinical Clinical event and case management models]
   * [ModelDrug Drug (PKPD) action & resistance models]
 
-  * [Interventions List of interventions]
+  * [XmlScenario#Interventions List of interventions]
