Edited wiki page through web user interface.
git-svn-id: https://openmalaria.googlecode.com/svn@1074 aa1ca794-fd11-11dd-ac65-f74f249cfaac

--- a/wiki/TableOfContents.wiki
+++ b/wiki/TableOfContents.wiki
@@ -5,6 +5,7 @@
   * [SetupOverview Getting started (local simulations)]
   * *[XmlScenario Inputs: creating a scenario]*
   * *[OutputFiles Outputs: interpreting results]*
+     * LiveGraph
 
 ===Code===
   * [Code#Source_code Source]
